# furu

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  PLANS.md  README.md  TODO.md  pyproject.toml  result-migration-options.html  skibidi.py
.github/workflows/: ci.yml  release.yml
dashboard-frontend/: tailwind.config.js
dashboard-frontend/src/: api.test.ts
e2e/: generate_data.py
e2e/tests/: api.spec.ts  experiments.spec.ts  home.spec.ts
examples/: README.md  run_local_executor_benchmark.py  run_logging.py  run_nested.py  run_train.py
examples/my_project/: __init__.py  benchmark_tasks.py  pipelines.py
plans/executor-v2/: plan.md
plans/migration/: v2.md
plans/query/: entrypoint.md  plan.md  run-ralph.md
scripts/: push-todo-directly.py  release-bump.py  run-slurm-integration.sh
src/furu/: __init__.py  _batched.py  _cli.py  _declared_types.py  _fields.py  _function.py  _storage_layout.py  _typing.py  aliases.py  annotations.py  artifact.py  config.py  constants.py  core.py  dag.py  dependencies.py  diff.py  errors.py  execution.py  executor.py  executors.py  explain.py  flufl.py  function.py  graph.py  identity.py  layout.py  local_executor.py  method.py  (+32 more)
tests/: conftest.py  slurm_objects.py  subprocess_objects.py  test_batching.py  test_config.py  test_core.py  test_dag.py  test_dependencies.py  test_efficiency.py  test_errors.py  test_execution_coordinator.py  test_execution_plan.py  test_executor.py  test_executor_context.py  test_flufl.py  test_furu_core.py  test_furu_dependencies.py  test_furu_locking_contention.py  test_huldra_core.py  test_huldra_inheritance.py  test_huldra_list.py  test_identity.py  test_local_executor.py  test_locking.py  test_locking_manager.py  test_logger.py  test_logging.py  test_main_module_resolution.py  test_manager.py  test_manager_connection.py  test_metadata.py  test_migration.py  test_migrations.py  test_provenance.py  test_provenance_wiring.py  test_query_ast.py  test_query_dsl.py  test_query_eval.py  test_query_paths.py  test_query_validate.py  (+27 more)
(+166 files in other folders)
