[project]
name = "furu"
version = "0.0.12"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Herman Brunborg", email = "herman@brunborg.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "pytest>=9.0.2",
]
