[project]
name = "furu"
version = "0.0.15"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Herman Brunborg", email = "herman@brunborg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flufl-lock>=9.0.0",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
]

[project.entry-points.pytest11]
furu = "furu.testing"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
