[project]
name = "furu"
version = "0.0.50"
description = "Reproducible experiments in plain Python: cached results and dependency-aware execution."
readme = "README.md"
authors = [
    { name = "Herman Brunborg", email = "herman@brunborg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.46.0",
]

[project.urls]
Repository = "https://github.com/hermabr/furu"

[project.entry-points.pytest11]
furu = "furu.testing"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "marimo>=0.23.5",
    "numpy>=2.4.4",
    "polars>=1.40.1",
    "pytest>=9.0.2",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.pytest.ini_options]
markers = [
    "slurm_integration: opt-in Docker-backed tests that run against a real local Slurm daemon",
]
